<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        style="@style/TextInsNotaAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_sort_black"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:text="@string/sortby" />

    <TextView
        android:id="@+id/sortDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/most_recent" />

    <TextView
        android:id="@+id/sortAsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/most_old" />

    <TextView
        android:id="@+id/sortAZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/alphabet" />


</LinearLayout>