<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/TextInsNotaAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_create"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:text="@string/insert_alert_note_title" />


    <EditText
        android:id="@+id/ins_title"
        style="@style/EditTextStyleNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ins_title"
        android:inputType="textCapSentences|textMultiLine|textPhonetic" />

    <EditText
        android:id="@+id/ins_nota"
        style="@style/EditTextStyleNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/ins_note"
        android:inputType="textCapSentences|textMultiLine|textPhonetic" />


</LinearLayout>