<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="app.memo.com.memoapp.InsertNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/colorSelected"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/TextSpace"
            android:layout_marginTop="15dp"
            android:layout_weight="0.9"
            android:text="@string/choose_color"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/pickerColor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_color_palette" />

    </LinearLayout>

    <EditText
        android:id="@+id/ins_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ins_title"
        android:inputType="textCapSentences|textMultiLine" />

    <EditText
        android:id="@+id/ins_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ins_note"
        android:inputType="textCapSentences|textMultiLine"
        android:isScrollContainer="true" />


</LinearLayout>
